# pyproject_init

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  main.py  notebook-test.ipynb  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml  test-publish.yml  test_and_lint.yml
pyproject_init/: __init__.py  cli.py  pyproject_initializer.py
pyproject_init/utils/: projectfiles.py  pythonfiles.py
pyprojectinit/: __init__.py  cli.py  pyproject_initializer.py
pyprojectinit/test/: test_projectfiles.py  test_pyproject.py  test_pythonfiles.py
pyprojectinit/utils/: projectfiles.py  pythonfiles.py
src/: annex.py  files.py  pyproject_initializer.py
test/: __init__.py  test_cli.py  test_projectfiles.py  test_pyproject.py  test_pythonfiles.py
